# sigma-opengl

./: CMakeLists.txt
include/sigma/graphics/opengl/: render_uniforms.hpp  renderer.hpp  static_mesh_manager.hpp
resources/: default.frag  default_basic.frag  default_dielectric.frag  default_matalic.frag
resources/pbr/deffered/: geometry_buffer.glsl
resources/pbr/deffered/lights/: image_based.frag
src/sigma/graphics/opengl/: debug_draw_renderer.cpp  renderer.cpp
